# woodworker_idle_bot

./: Cargo.toml
src/: enums.rs  loops.rs  main.rs  player.rs  utils.rs
src/commands/: assign.rs  build.rs  chop.rs  dry.rs  mod.rs  ping.rs  player.rs  prestige.rs  sell.rs  store.rs  unassign.rs  upgrade.rs
src/enums/: furniture.rs  tree.rs
src/loops/: action.rs  assignment.rs  offline.rs
src/player/: action.rs  axe.rs  data.rs  enums.rs  furnitures.rs  hammer.rs  player.rs  prestige.rs  stats.rs  upgrades.rs  woods.rs
src/player/data/: action.rs  color.rs  furnitures.rs  offline.rs  stats.rs  upgrades.rs
src/player/enums/: axe.rs  bp_unlock.rs  kiln.rs  trees.rs  trees_unlock.rs
