[package]
name = "lumber_idle_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "collector"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
mongodb = { version = "2.1"}
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4"
serde = "1.0"
serde_urlencoded = "0.7"
serde_json = "1.0"
futures = "0.3"